# Dataops-ML

./: .zshrc  Dockerfile  api.py  ensai-2024-37c511689d57.json  main.py  main.tf  prenoms.ipynb  pyproject.toml  startup_script.sh  terraform.tfstate  terraform.tfstate.backup
.github/workflows/: main.yml
