[tool.poetry]
name = "prenoms"
version = "0.1.0"
description = ""
authors = ["gnartiub <buiquynhtrang1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
ollama = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
